welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: value <+ is not a member of Int
	if (nums.length <+ 4) {
                        ^